Bugfix: YT video size Paragraph text changed to justify align

--- a/src/Style.css
+++ b/src/Style.css
@@ -26,7 +26,7 @@ body {
     .page .divider {
         clear: both;
         text-align: left;
-        font-size: 10px;
+        font-size: 8pt;
         color: #5e5e5e;
         border-bottom: 1px solid #aaa;
         margin: 0 -70px 10px -70px;
@@ -103,6 +103,7 @@ body {
 
     .box p {
         font-size: 12pt;
+        text-align: justify;
     }
 
     .box .event {
